# picasso-task

./: .gitignore  README.md  pyproject.toml
src/picasso_task/: all.py  connect.py  cr_db.py  ins_db.py  pages.py  settings.py
tests/: test_picasso_task.py
